# haya-rs

./: .env.example  .gitignore  Cargo.toml  Containerfile  LICENSE-APACHE  LICENSE-MIT  README.md  charon.code-workspace  compose.devel.yml  compose.yml  config.yaml  rustfmt.toml  tasks.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
.mk/vault/: .vault-meta.toml
.mk/vault/local/agents/: data.asc
certs/: cert.pem  priv-key.pem  priv-keypair-set.json  priv-keypair.json  pub.json  pub.pem
contrib/demo-app/: .env.example  index.html  package.json  vite.config.ts
contrib/demo-app/src/: App.css  App.tsx  haya.ts
contrib/docker/: init-db.sh
contrib/docker/nginx/: devel.conf
contrib/systemd/: haya.env.example  haya.service
migrations/: 1631676633583_create_extension_uuid_ossp.sql  1631676633583_create_haya_client_table.sql  1631676691724_create_haya_jwk_table.sql  1631676691724_create_table_grant_type.sql  1631676754801_create_haya_oauth2_access_table.sql  1631676754801_create_table_response_type.sql  1631676810905_create_haya_oauth2_authentication_request_table.sql  1631676810905_create_table_scope.sql  1631676822625_create_haya_oauth2_authentication_request_handled_table.sql  1631676822625_create_table_client.sql  1631676839194_create_haya_oauth2_authentication_session_table.sql  1631676839194_create_table_client_grant_type.sql  1631676847329_create_haya_oauth2_code_table.sql  1631676847329_create_table_client_redirect_uri.sql  1631676859289_create_haya_oauth2_consent_request_table.sql  1631676859289_create_table_client_response_type.sql  1631676864321_create_haya_oauth2_consent_request_handled_table.sql  1631676864321_create_table_client_scope.sql  1631676879672_create_haya_oauth2_jti_blacklist_table.sql  1631676879672_create_table_oauth_jti_blacklist.sql  1631676894399_create_haya_oauth2_logout_request_table.sql  1631676894399_create_table_oauth_authorization_code.sql  1631676911416_create_haya_oauth2_obfuscated_authentication_session_table.sql  1631676911416_create_view_client_grant_type_view.sql  1631676923740_create_haya_oauth2_oidc_table.sql  1631676923740_create_view_client_response_type_view.sql  1631676933851_create_haya_oauth2_pkce_table.sql  1631676933851_create_view_client_scope.sql  1631676944387_create_haya_oauth2_refresh_table.sql  1631676944387_create_view_client_unite.sql  1732763425725_create_role_auth.sql  202411280001_create_role_auth.sql  202604040001_extend_flow_state_for_oidc.sql  202604040002_extend_flow_state_for_totp_mfa.sql  202604040003_fix_confirmed_at_generated.sql  202604040004_create_oidc_providers.sql  202604050001_harden_mfa_and_email_flows.sql  202604060001_create_rate_limits.sql  202604060002_add_magic_link_tokens.sql
src/: authentication.rs  claims.rs  cli.rs  config.rs  db.rs  defaults.rs  discovery.rs  end_session.rs  errors.rs  id_token.rs  introspection.rs  main.rs  mime.rs  state.rs  strategy.rs  token.rs  well_known.rs
src/auth/: audit.rs  jwt.rs  mfa.rs  mod.rs  oidc.rs  password.rs  rate_limit.rs  session.rs
src/error/: api_error.rs  mod.rs  service_error.rs
src/errors/: api_error.rs  mod.rs  service_error.rs
src/internal/: authentication.rs  identity_token.rs  introspection.rs  router.rs  user_info.rs  user_info_error.rs
src/internal/claims/: address_claim.rs  standard_claim.rs
src/mailer/: mod.rs
src/middleware/: auth.rs  cors.rs
src/middlewares/: cors.rs
src/model/: authorization_code_claims.rs  client.rs  mod.rs  oauth_access.rs  oauth_access_token.rs  oauth_authentication_request.rs  oauth_authentication_request_handled.rs  oauth_authentication_session.rs  oauth_authorization_code.rs  oauth_client.rs  oauth_code.rs  oauth_consent_request.rs  oauth_consent_request_handled.rs  oauth_jti_blacklist.rs  oauth_jwk.rs  oauth_logout_request.rs  oauth_oidc.rs  oauth_pkce.rs  oauth_refresh.rs  oauth_refresh_token.rs  oauth_server_metadata.rs
src/models/: client.rs  mod.rs  oauth_access_token.rs  oauth_authorization_code.rs  oauth_authorization_server_metadata.rs  oauth_jwk.rs  oauth_refresh_token.rs  standard_token_claims.rs
src/public/: authentication.rs  discovery.rs  end_session.rs  mod.rs  payloads.rs  router.rs  strategy.rs
src/public/claims/: mod.rs
src/public/handler/: admin.rs  authorize.rs  health.rs  introspect.rs  jwks.rs  logout.rs  metadata.rs  mfa.rs  mod.rs  oauth2.rs  otp.rs  reauthenticate.rs  recover.rs  resend.rs  revoke.rs  settings.rs  signup.rs  sso.rs  token.rs  trace.rs  user.rs  userinfo.rs  verify.rs
src/public/handlers/: authorize.rs  health.rs  introspect.rs  metadata.rs  mod.rs  revoke.rs  token.rs  trace.rs
src/utils/: mod.rs
templates/email/: confirm.html  confirm.txt  magic_link.html  magic_link.txt  recovery.html  recovery.txt
tests/: integration_test.rs
views/: consent.html  login.html  logout.html  session_logout.hbs
