[package]
name = "haya"
version = "0.1.1"
authors = ["Edward Fitz Abucay <ffimnsr@pm.me>"]
description = "An Oauth 2.0 server implemented in pure Rust"
categories = ["authentication", "oauth2", "dpop`"]
keywords = ["authentication", "oauth", "microservice", "provider", "cli"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ffimnsr/haya-rs"
repository = "https://github.com/ffimnsr/haya-rs"
edition = "2021"
readme = "README.md"
exclude = [".gitignore"]

[dependencies]
dotenv = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["full"] }
routerify = "2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "= 1.0.72"
serde_yaml = "0.8"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros", "time"] }
mongodb = "2.2"
bson = { version = "2.1", features = ["uuid-0_8", "chrono-0_4"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = "0.2"
num-bigint = "0.3"
jsonwebtoken = "= 7.2.1"
base64 = "0.13"
url = { version = "2.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "3.1.18", features = ["derive"] }
tinytemplate = "1.2"
cookie = "= 0.12"
rand = { version = "0.8", features = ["min_const_gen"] }
sha-1 = "0.10.0"
sha2 = "0.10.0"
lazy_static = "1.4.0"
sys-info = "0.9"
async-trait = "0.1"

[patch.crates-io]
jsonwebtoken = { git = "https://github.com/fzrepo/jsonwebtoken" }
