[package]
name = "haya"
version = "0.1.1"
authors = ["Edward Fitz Abucay <ffimnsr@pm.me>"]
description = "An Oauth 2.0 server implemented in pure Rust"
categories = ["authentication", "oauth2", "dpop`"]
keywords = ["authentication", "oauth", "microservice", "provider", "cli"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ffimnsr/haya-rs"
repository = "https://github.com/ffimnsr/haya-rs"
edition = "2021"
readme = "README.md"
exclude = [".gitignore"]

[dependencies]
dotenv = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros", "time", "signal"] }
base64 = "0.13"
url = { version = "2.1", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
tinytemplate = "1.2"
cookie = "= 0.12"
rand = { version = "0.8", features = ["min_const_gen"] }
sha-1 = "0.10.0"
sha2 = "0.10.0"
anyhow = "1.0.95"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "derive", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.1", features = ["serde", "v4", "v7"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
axum = { version = "0.8.1", features = ["tracing"] }
